# -cd-smarttesting-python

./: README.adoc  pyproject.toml  setup.cfg
00-app/00-bik-service/: README.adoc
00-app/00-fraud-detection/: pyproject.toml
01-introduction-to-testing/01-01-unit-tests/: README.adoc
01-introduction-to-testing/01-01-unit-tests/tests/verifier/customer/verification/: test_age.py
02-unit-testing/02-01-unit-tests/tests/order/: test_loan_order_service.py
03-integration-testing/03-02-ioc/: README.adoc
03-integration-testing/03-03-controller/: README.adoc
03-integration-testing/03-03-controller/tests/client/: _02_fraud_controller_with_port_binding_tests.py
03-integration-testing/03-04-client/: README.adoc
03-integration-testing/03-04-client/tests/client/: wiremock_running_test.py
03-integration-testing/03-05-db/: README.adoc
03-integration-testing/03-05-db/tests/smarttesting/verifier/customer/: _03_customer_verifier_with_embedded_sqlite_tests.py  _04_customer_verifier_with_container_tests.py
03-integration-testing/03-06-messaging/tests/smarttesting/verifier/customer/: _03_fraud_alert_task_tests.py  conftest.py
03-integration-testing/03-07-dev/03-07-01-in-mem/: Dockerfile
03-integration-testing/03-07-dev/03-07-01-in-mem/smarttesting/: web_app.py
03-integration-testing/03-07-dev/03-07-02-runner/: README.adoc  docker-compose.yml
03-integration-testing/03-07-dev/03-07-02-runner/tests/: test_with_docker_compose.py
04-end-to-end-testing/04-01-rest-based-e2e/e2e/tests/: http_based_customer_verification_base.py
04-end-to-end-testing/04-02-gui-based-e2e/: README.adoc
04-end-to-end-testing/04-02-gui-based-e2e/tests/pet_clinic/: pet_clinic_selene_test.py  pet_clinic_test.py
05-architecture/05-02-packages/05-02-01-core/tests/lesson2/: _02_threadlocals_tests.py  _03_architecture_tests.py
05-architecture/05-03-cdc/: 01_generate_stubs_with_scc.sh  02_run_stubrunner.sh  README.adoc
05-architecture/05-03-cdc/05-03-01-producer/: dev_database.db
05-architecture/05-03-cdc/05-03-01-producer/spring-cloud-contract-output/generated-test-sources/contracts/contracts/: ContractVerifierTest.java
05-architecture/05-03-cdc/05-03-01-producer/spring-cloud-contract-output/reports/tests/test/: index.html
05-architecture/05-03-cdc/05-03-01-producer/spring-cloud-contract-output/reports/tests/test/classes/: contracts.ContractVerifierTest.html
05-architecture/05-03-cdc/05-03-01-producer/spring-cloud-contract-output/test-results/test/: TEST-contracts.ContractVerifierTest.xml
05-architecture/05-03-cdc/05-03-02-consumer/consumer/: __init__.py  consumer_pact_tests.py  consumer_spring_cloud_contract_tests.py
05-architecture/05-05-performance/: Dockerfile  docker-compose.yml  pyproject.toml
07-going-to-production/: Dockerfile  README.adoc  docker-compose.yml  pyproject.toml
07-going-to-production/fraud_verifier/: __init__.py
07-going-to-production/fraud_verifier/feature_toggles/: features.py  manager.py  model.py
07-going-to-production/fraud_verifier/modules/: db.py  feature_toggles.py
07-going-to-production/grafana_data/: grafana.db
07-going-to-production/loan_orders/: __init__.py
07-going-to-production/loan_orders/fraud/: client.py
08-advanced/08-02-multithreading/: README.adoc
08-advanced/08-03-docs/: README.adoc
08-advanced/08-04-mutation/: README.adoc
09-tests-and-design/09-03-discovery-problems/tests/: discoverable_tests.py
09-tests-and-design/09-homework/: README.adoc
